--- a/cv.html
+++ b/cv.html
@@ -31,9 +31,9 @@
         <p class="experience__annee">2024</p>
         <p>Au cours de ma formation j'ai dû réalise:</p>
         <ul>
-            <li>Création d'une page sur Docteur Norman</li>
-            <li>Création d'un formalaire de renseignement</li>
-            <li>Développement d'un portefolio</li>
+            <li>une page sur Docteur Norman</li>
+            <li>un formalaire de renseignement</li>
+            <li>un portefolio</li>
         </ul>
     </section><hr>
     <div class="professional">
