--- a/projets.html
+++ b/projets.html
@@ -37,7 +37,7 @@
         <div class="bloc">
             <div class="bloc__texte">
                 <h2 class="bloc__texte modification--titre"><strong>Portefolio</strong></h2>
-                <p class="bloc__texte modification--texte" >Mon portefolio qui detrit en quelque ligne qui je suis et donne des details précis de mon parcours</p>
+                <p class="bloc__texte modification--texte" >Mon portefolio qui detrit en quelque ligne qui je suis et les details de mon parcours.</p>
             </div>
             <div class="bloc__image">
                 <img src="media/ordinateur/portefolio.jpg" alt="imageP" class="bloc__image image--dimension">
